--- a/oscar/templates/dashboard/users/detail.html
+++ b/oscar/templates/dashboard/users/detail.html
@@ -63,5 +63,32 @@ User {{ user.username }} | {{ block.super }}
         <p>This user has not placed any orders yet.</p>
     {% endif %}
 </div>
+<div id="user_reviews">
+    <div class="sub-header">
+        <h2>Reviews</h2>
+    </div>
+    {% if user.reviews.count %}
+    <table class="table table-striped table-bordered">
+        <tr>
+            <th>Product ID</th>
+            <th>Score</th>
+            <th>Title</th>
+            <th>Body</th>
+            <th>Date created</th>
+        </tr>
+        {% for review in user.reviews.all %}
+        <tr>
+            <td>{{ review.product_id }}</td>
+            <td>{{ review.score }}</td>
+            <td>{{ review.title }}</td>
+            <td>{{ review.body }}</td>
+            <td>{{ review.date_created }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% else %}
+    <p>This user has not written any reviews yet.</p>
+    {% endif %}
+</div>
 {% endwith %}
 {% endblock dashboard_content %}
