--- a/oscar/templates/dashboard/pages/index.html
+++ b/oscar/templates/dashboard/pages/index.html
@@ -30,10 +30,28 @@ Pages | {{ block.super }}
 {% endblock header %}
 
 {% block dashboard_content %}
+
 <div class="sub-header">
     <h2>{{ queryset_description }}</h2>
 </div>
-{% if page_list.count %}
+
+<form action="{% url dashboard:page-create %}" method="get" class="form-horizontal">
+        {%comment%}
+	<div class="control-group">
+		<div class="controls">
+			<select id="id_promotion_type" name="product_class">
+				<option> -- choose type --</option>
+				{% for product_class in product_classes %}
+				<option value="{{ product_class.id }}">{{ product_class.name }}</option>
+				{% endfor %}
+			</select>
+		</div>
+	</div>
+        {%endcomment%}
+        <input type="submit" value="Create New Page" class="btn-primary" />
+</form>
+
+{% if flatpage_list.count %}
 <form action="." method="post">
     {% csrf_token %}
 <table class="table table-striped table-bordered">
@@ -43,13 +61,13 @@ Pages | {{ block.super }}
         <th>URL</th>
         <th></th>
     </tr>
-    {% for page in page_list %}
+    {% for page in flatpage_list %}
     <tr>
         <td><input type="checkbox" name="selected_user" class="selected_user" value="{{ page.id }}"/>
         <td>{{ page.title}}</td>
         <td>{{ page.url}}</td>
         <td>
-            <a href="{% url dashboard:page-detail page.id %}">View</a>
+            <a class="btn btn-info" href="{% url dashboard:page-update page.id %}">Edit</a>
         </td>
     </tr>
     {% endfor %}
@@ -58,25 +76,6 @@ Pages | {{ block.super }}
 {% if page_obj %}
     {% include "catalogue/partials/pagination.html" %}
 {% endif %}
-
-<p></p>
-<div class="well well-info">
-    <div class="control-group">
-        <label class="control-label" for="inlineCheckboxes">With selected users:</label>
-        <div class="controls">
-            <label class="radio inline">
-                <input type="radio" name="action" value="make_active" /> Make active
-            </label>
-            <label class="radio inline">
-                <input type="radio" name="action" value="make_inactive" /> Make inactive
-            </label>
-        </div>
-    </div>
-
-    <div class="alert-actions">
-        <input type="submit" value="Go!" class="btn" />
-    </div>
-</div>
 </form>
 
 {% else %}
