--- a/oscar/static/less/dashboard.less
+++ b/oscar/static/less/dashboard.less
@@ -165,6 +165,7 @@ button {
 .page-header {
   background-color: @white;
   padding: 10px 20px 10px 0px;
+  margin-bottom:0px;
   h1 {
 /*        font-size: 24px;
         line-height: 36px;*/
@@ -334,16 +335,28 @@ h3 {
 }
 
 .tabbable.dashboard {
-    border-left: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    border-bottom-radius: 5px;
-        .tab-content > .active {
-        padding: 18px;
-    }
-    .nav-tabs > li > a {
-    background: #F5F5F5;
-    }
-    .nav-tabs > li.active a {
-        background: #fff;
-    }
+  .nav {
+    margin-bottom:0px;
+  }
+  .nav-tabs > li > a {
+    background: #fff;
+    border: 1px solid #DDD;
+    
+  }
+  .nav-tabs > li.active a {
+    background: #f5f5f5;
+    border-bottom-color: transparent;
+  }
+  .tab-content {
+    padding:@baseLineHeight;
+    border:1px solid darken(@grayLighter, 5%);
+    border-top-width:0px;
+    background:#f5f5f5;
+  }
+}
+.new-product {
+  input[type=text],
+  textarea {
+    width:99%;
+  }
 }
