--- a/oscar/templates/dashboard/promotions/pagepromotion_list.html
+++ b/oscar/templates/dashboard/promotions/pagepromotion_list.html
@@ -25,7 +25,8 @@ Pages with content blocks | {{ block.super }}
 
 {% block dashboard_content %}
 
-<div class="well well-info">
+<div class="well well-danger">
+    <h3 class="app-ico ico_view icon">View by page</h3>
     <a href="{% url dashboard:promotion-list %}" class="btn btn-primary">View all promotions</a>
     <a href="{% url dashboard:promotion-list-by-page %}" class="btn">View promotions by page</a>
 </div>
