--- a/oscar/templates/dashboard/users/index.html
+++ b/oscar/templates/dashboard/users/index.html
@@ -16,16 +16,8 @@ Users | {{ block.super }}
 {% endblock %}
 
 {% block header %}
-<div class="page-header action">
+<div class="page-header">
     <h1>User management</h1>
-</div>
-
-<div class="well well-info">
-    <h3 class="app-ico ico_magnify icon">Search</h3>
-    <form action="." method="get" class="form-inline">
-        {% include "partials/form_fields_inline.html" with form=form %}
-        <input type="submit" value="Search" class="btn btn-primary"/>
-    </form>
 </div>
 {% endblock header %}
 
@@ -33,9 +25,29 @@ Users | {{ block.super }}
 <div class="sub-header">
     <h2>{{ queryset_description }}</h2>
 </div>
+<div class="well well-info">
+    <h3 class="app-ico ico_magnify icon">Search</h3>
+    <form action="." method="get" class="form-inline">
+        {% include "partials/form_fields_inline.html" with form=form %}
+        <input type="submit" value="Search" class="btn btn-primary"/>
+    </form>
+</div>
 {% if user_list.count %}
-<form action="." method="post">
+<form action="." method="post" class="form-inline">
     {% csrf_token %}
+
+<div class="well well-danger">
+    <h3 class="app-ico ico_sync icon">Bulk Actions</h3>
+    <label for="inlineCheckboxes">With selected users:</label>
+    <label>
+        <input type="radio" name="action" value="make_active" /> Make active
+    </label>
+    <label>
+        <input type="radio" name="action" value="make_inactive" /> Make inactive
+    </label>
+    <input type="submit" value="Go!" class="btn btn-primary" />
+</div>
+
 <table class="table table-striped table-bordered">
     <tr>
         <th></th>
@@ -72,23 +84,7 @@ Users | {{ block.super }}
 {% endif %}
 
 <p></p>
-<div class="well well-info">
-    <div class="control-group">
-        <label class="control-label" for="inlineCheckboxes">With selected users:</label>
-        <div class="controls">
-            <label class="radio inline">
-                <input type="radio" name="action" value="make_active" /> Make active
-            </label>
-            <label class="radio inline">
-                <input type="radio" name="action" value="make_inactive" /> Make inactive
-            </label>
-        </div>
-    </div>
 
-    <div class="alert-actions">
-        <input type="submit" value="Go!" class="btn" />
-    </div>
-</div>
 </form>
 
 {% else %}
