added help_text display to field

--- a/oscar/templates/partials/form_fields.html
+++ b/oscar/templates/partials/form_fields.html
@@ -11,6 +11,11 @@
 					{{ error|escape }}
 				</span>
 			{% endfor %}
+                        {% if field.help_text %}
+                            <span class='help-block'>
+                                {{ field.help_text }}
+                            </span>
+                        {% endif %}
 		</div>
 	{% endif %}
 </div>
