--- a/oscar/templates/dashboard/pages/update.html
+++ b/oscar/templates/dashboard/pages/update.html
@@ -29,7 +29,7 @@
 
 		<div class="form-actions">
                 <button class="btn btn-primary" type="submit">Save</button> or 
-			<a href="{% url dashboard:page-list">cancel</a>
+                <a href="{% url dashboard:page-list %}">cancel</a>
 		</div>
 </form>
 {% if page %}
