corrected reference to navigation location in template

--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -7,5 +7,5 @@
 {% endblock %}
 
 {% block dashboard_content %}
-<p>Choose an option from the left.</p>
+<p>Choose an option from above.</p>
 {% endblock %}
