removed categories on the homepage side bar, added left promo on the homepage layout

--- a/oscar/static/css/styles.css
+++ b/oscar/static/css/styles.css
@@ -3832,6 +3832,10 @@ body {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 /*** Promotional block styles ***/
+.sidebar .promotion_single .row-fluid > [class*="span"] {
+  float: none;
+  width: auto;
+}
 /*** Badge styles ***/
 .group-price {
   position: absolute;
