--- a/oscar/templates/promotions/layout.html
+++ b/oscar/templates/promotions/layout.html
@@ -89,9 +89,12 @@
     <div class="container-fluid page home">
         <div class="page_inner">
             <div class="row-fluid">
-                {% block container_nav %}
-                {% endblock %}
-                <aside class="span3">
+                <aside class="sidebar span3">
+                    <div id="promotions_left">
+                		{% for promotion in promotions_left %}
+                		{% render_promotion promotion %}
+                		{% endfor %}
+                	</div>
                     {% block sidebar %}
                     {% endblock %}
                 </aside><!-- /span3 -->
@@ -107,6 +110,8 @@
                 		{% render_promotion promotion %}
                 		{% endfor %}
                 	</div>
+                	
+                	
                 	{% block content %}
                 	{% endblock %}
                 </div><!-- /span9 -->
