--- a/oscar/templates/promotions/singleproduct.html
+++ b/oscar/templates/promotions/singleproduct.html
@@ -21,9 +21,9 @@
     			{% else %}
     				{% if product.has_stockrecord %} 
     					<h4><span>{{ product.stockrecord.price_incl_tax|currency }}</span></h4>
-						<p class="app-ico {{ product.stockrecord.availability_code }}">{{ product.stockrecord.availability|truncatewords:2 }}</p>
+						<p class="app-ico {{ product.stockrecord.availability_code }} avaliability">{{ product.stockrecord.availability|truncatewords:2 }}</p>
     				{% else %}
-    				<p class="app-ico notavailable">Not available</p>
+    				<p class="app-ico notavailable avaliability">Not available</p>
     				<button class="btn">Notify me</button> 
     				{% endif %}
     			{% endif %}
