--- a/oscar/templates/customer/profile.html
+++ b/oscar/templates/customer/profile.html
@@ -11,10 +11,13 @@ Profile | {{ block.super }}
 </div>
 {% endblock header %}
 
-
 {% block content %}
 <div class="sub-header">
     <h3>Account settings</h3>
+</div>
+
+<div class="sub-header">
+    <h3>Profile</h3>
 </div>
 <table class="table table-striped table-bordered">
 	<tbody>
@@ -26,45 +29,80 @@ Profile | {{ block.super }}
 			<th>Name</th>
 			<td>{{ request.user.get_full_name|default:'-' }}</td>
 		</tr>
+		<tr>
+			<th>Email address</th>
+			<td>{{ user.email }}</td>
+		</tr>
+		<tr>
+			<th>Date registered</th>
+			<td>{{ user.date_joined }}</td>
+		</tr>
+		<tr>
+			<th></th>
+			<td>
+				<a href="" class="btn">Edit profile</a>
+				<a href="" class="btn">Change password</a>
+			</td>
+		</tr>
 	</tbody>
 </table>
-<div class="form-actions">
-    <a href="{% url customer:address-list %}" class="btn btn-primary">Manage address book</a>
-    <a href="" class="btn">Change password</a>
-</div>
 
 <div class="sub-header">
     <h3>Order history</h3>
 </div>
 
 {% if orders %}
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Order number</th>
-        <th>Total inc tax</th>
-        <th>Date submitted</th>
-        <th></th>
-    </tr>
-    {% for order in orders %}
-    <tr>
-        <td>{{ order.number }}</td>
-        <td>{{ order.total_incl_tax|currency }}</td>
-        <td>{{ order.date_placed }}</td>
-        <td>
-            <a href="{% url customer:order order.number %}">View</a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
+	<table class="table table-striped table-bordered">
+		<tr>
+			<th>Order number</th>
+			<th>Total inc tax</th>
+			<th>Date submitted</th>
+			<th></th>
+		</tr>
+		{% for order in orders %}
+		<tr>
+			<td>{{ order.number }}</td>
+			<td>{{ order.total_incl_tax|currency }}</td>
+			<td>{{ order.date_placed }}</td>
+			<td>
+				<a class="btn btn-info" href="{% url customer:order order.number %}">View</a>
+			</td>
+		</tr>
+		{% endfor %}
+	</table>
 
-<div class="form-actions">
-    <a href="{% url customer:order-list %}" class="btn">View order history</a>
-</div>
-
+	<div class="form-actions">
+		<a href="{% url customer:order-list %}" class="btn">View order history</a>
+	</div>
 {% else %}
-<p>You haven't placed any orders yet.</p>
-
+	<p>You haven't placed any orders yet.</p>
 {% endif %}
+
+<div class="sub-header">
+    <h3>Address book</h3>
+</div>
+<table class="table table-striped table-bordered">
+	<tbody>
+		<tr>
+			<th>Number of addresses in addressbook</th>
+			<td>{{ addressbook_size }}</td>
+		</tr>
+		<tr>
+			<th>Default shipping address</th>
+			<td>{{ default_shipping_address|default:"-" }}</td>
+		</tr>
+		<tr>
+			<th>Default billing address</th>
+			<td>{{ default_billing_address|default:"-" }}</td>
+		</tr>
+		<tr>
+			<th></th>
+			<td>
+				<a href="{% url customer:address-list %}" class="btn btn-primary">Manage address book</a>
+			</td>
+		</tr>
+	</tbody>
+</table>
 
 <div class="sub-header">
     <h3>Email history</h3>
