--- a/oscar/templates/partials/nav_accounts.html
+++ b/oscar/templates/partials/nav_accounts.html
@@ -3,14 +3,16 @@
 		<div class="container-fluid">
 			<ul class="nav pull-right">
 				{% if user.is_authenticated %}
-				<li><div>Welcome <em>{{ user.username }}</em></div></li>	
-				<li> <a href="{% url customer:summary %}" class="app-ico ico_profile">Account</a></li>
-				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
-				{% if user.is_staff %}
-				<li><a href="{% url dashboard:index %}" class="app-ico ico_settings">Dashboard</a></li>
-				{% endif %}
+				    {% if user.get_full_name %}
+					<li><div>Welcome <em>{{ user.get_full_name }}</em></div></li>
+					{% endif %}
+					<li> <a href="{% url customer:summary %}" class="app-ico ico_profile">Account</a></li>
+					<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
+					{% if user.is_staff %}
+						<li><a href="{% url dashboard:index %}" class="app-ico ico_settings">Dashboard</a></li>
+					{% endif %}
 				{% else %}
-				<li><a href="{% url customer:login %}" class="app-ico ico_logout">Login</a></li>
+					<li><a href="{% url customer:login %}" class="app-ico ico_logout">Login</a></li>
 				{% endif %}
 			</ul>
 		</div>
